# fortran_cmake

./: .gitignore
compiler/: CMakeLists.txt  CMakePresets.json  README.md
compiler/cmake/: gcc-toolchain.cmake
compiler/src/: CMakeLists.txt  main.f90
fftw/: CMakeLists.txt  README.md  m_fftw3.f90  m_tests.f90  main.f90
fftw/cmake/: intel-toolchain.cmake
unittest/: CMakeLists.txt  CMakePresets.json  README.md
unittest/cmake/: fortuno.cmake
unittest/src/: CMakeLists.txt  mylib.f90
unittest/testings/: CMakeLists.txt  test_simple.f90  testapp.f90
